--- a/apache2/sites/default.apache.conf
+++ b/apache2/sites/default.apache.conf
@@ -1,16 +1,71 @@
+# phpMyadmin
+ProxyPass /phpmyadmin http://phpmyadmin:80/
+ProxyPassReverse /phpmyadmin http://phpmyadmin:80/
+
+<VirtualHost *:443>
+    DocumentRoot "/var/www/PHP/icd/worktime.duynq.icd/public/"
+    ServerName worktime.duynq.icd
+
+    SSLEngine on
+    SSLCertificateFile /var/www/Server/ssl/_wildcard.duynq.icd.cert
+    SSLCertificateKeyFile /var/www/Server/ssl/_wildcard.duynq.icd.key
+
+    RewriteEngine On
+    RewriteOptions InheritBefore
+
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+    RewriteCond $1 ^(.*\.php(/.*)?)$
+    RewriteRule ^(.*\.php(/.*)?)$ fcgi://php-fpm:9000%{DOCUMENT_ROOT}/$1 [L,P]
+
+    ErrorLog ${APACHE_LOG_DIR}/worktime.duynq.icd_error.log
+    CustomLog ${APACHE_LOG_DIR}/worktime.duynq.icd_access.log combined
+</VirtualHost>
+
+<VirtualHost *:443>
+    DocumentRoot "/var/www/PHP/maplife/projects/bus-route/mplf_route/public/"
+    ServerName maplife-bus-route.duynq.icd
+
+    SSLEngine on
+    SSLCertificateFile /var/www/Server/ssl/_wildcard.duynq.icd.cert
+    SSLCertificateKeyFile /var/www/Server/ssl/_wildcard.duynq.icd.key
+
+    RewriteEngine On
+    RewriteOptions InheritBefore
+
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+    RewriteCond $1 ^(.*\.php(/.*)?)$
+    RewriteRule ^(.*\.php(/.*)?)$ fcgi://php-fpm:9000%{DOCUMENT_ROOT}/$1 [L,P]
+
+    ErrorLog ${APACHE_LOG_DIR}/maplife-bus-route.duynq.icd_error.log
+    CustomLog ${APACHE_LOG_DIR}/maplife-bus-route.duynq.icd_access.log combined
+</VirtualHost>
+
+<VirtualHost *:443>
+    DocumentRoot "/var/www/PHP/personal/laravel-admin.duynq.icd/public/"
+    ServerName laravel-admin.duynq.icd
+
+    SSLEngine on
+    SSLCertificateFile /var/www/Server/ssl/_wildcard.duynq.icd.cert
+    SSLCertificateKeyFile /var/www/Server/ssl/_wildcard.duynq.icd.key
+
+    RewriteEngine On
+    RewriteOptions InheritBefore
+
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+    RewriteCond $1 ^(.*\.php(/.*)?)$
+    RewriteRule ^(.*\.php(/.*)?)$ fcgi://php-fpm:9000%{DOCUMENT_ROOT}/$1 [L,P]
+
+    ErrorLog ${APACHE_LOG_DIR}/laravel-admin.duynq.icd_error.log
+    CustomLog ${APACHE_LOG_DIR}/laravel-admin.duynq.icd_access.log combined
+</VirtualHost>
+
 <VirtualHost *:80>
-  ServerName laradock.test
-  DocumentRoot /var/www/
-  Options Indexes FollowSymLinks
+    DocumentRoot "/var/www/PHP/oliver/maintenance/"
+    ServerName oliver-maintenance.duynq.icd    
 
-  <Directory "/var/www/">
-    AllowOverride All
-    <IfVersion < 2.4>
-      Allow from all
-    </IfVersion>
-    <IfVersion >= 2.4>
-      Require all granted
-    </IfVersion>
-  </Directory>
-
+    ErrorLog ${APACHE_LOG_DIR}/oliver-maintenance.duynq.icd_error.log
+    CustomLog ${APACHE_LOG_DIR}/oliver-maintenance.icd_access.log combined
 </VirtualHost>
